--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 
 <body>
+    <body style="background-color:pink;">
     <h1>Szaria Thompson</h1>
     <img src="IMG_3510.png"></img>
     <p>
