--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif}
 <div class="w3-row-padding w3-light-grey w3-padding-64 w3-container">
   <div class="w3-content">
     <div class="w3-third w3-center">
-      <i class="fa fa-coffee w3-padding-64 w3-text-pink w3-margin-right"></i>
-      <img src="img_3510.png" width="500" height="600">
+      <i class="img_3510.png"width="300" height="400"></i>
+      
 
     </div>
 
