--- a/index.html
+++ b/index.html
@@ -52,10 +52,10 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif}
 
     <div class="w3-twothird">
       <h1>Get to Know Szaria</h1>
+      <img src="IMG_3510" alt="HEASHOT" class="center">
       <h5 class="w3-padding-32"> Bio</h5>
 
       <p class="w3-text-grey"> Sub Bio</p>
-      <i class="img_3510.png"width="300" height="400"></i>
     </div>
   </div>
 </div>
