--- a/index.html
+++ b/index.html
@@ -52,7 +52,9 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif}
 
     <div class="w3-twothird">
       <h1>Get to Know Szaria</h1>
-      <img src="IMG_3510.png" alt="HEASHOT" class="center">
+      <img src="IMG_3510.png" alt="HEASHOT" class="center"
+           width ="300"
+           height="400" >/
       <h5 class="w3-padding-32">Hi! My name is Szaria Thompson. I’m a Junior at The Illustrious Winston Salem State University, majoring in Computer Science. I was born and raised in Raleigh, NC and I am 20 years old. 
 Fun fact about myself: I’m a twin. One of my favorite things to do is binge watch Marvel Movies! I also enjoy spending time with family and friends, reading (specifically self-help and mystery),playing video games, and doing yoga. One of my guilty pleasures is shopping for clothes and new perfume. 
 
