--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif}
 <div class="w3-top">
   <div class="w3-bar w3-pink w3-card w3-left-align w3-large">
     <a class="w3-bar-item w3-button w3-hide-medium w3-hide-large w3-right w3-padding-large w3-hover-white w3-large w3-pink" href="javascript:void(0);" onclick="myFunction()" title="Toggle Navigation Menu"><i class="fa fa-bars"></i></a>
-    <a href="#" class="w3-bar-item w3-button w3-padding-large w3-white">Home</a>
+    <a href="#" class="w3-bar-item w3-button w3-padding-large w3-white">About me</a>
     <a href="https://github.com/st327" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Github</a>
     <a href="https://www.linkedin.com/in/szaria-thompson-386018163/" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">LinkedIn</a>
     
@@ -51,16 +51,16 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif}
     </div>
 
     <div class="w3-twothird">
-      <h1>Get to Know Szaria</h1>
+      <h1 style= "text-align:center;">Get to Know Szaria</h1>
       <img src="IMG_3510.png" alt="HEASHOT" class="center"
            width ="300"
-           height="400" >/
-      <h5 class="w3-padding-32">Hi! My name is Szaria Thompson. I’m a Junior at The Illustrious Winston Salem State University, majoring in Computer Science. I was born and raised in Raleigh, NC and I am 20 years old. 
+           height="400" >
+      <p style="textalign:center;">Hi! My name is Szaria Thompson. I’m a Junior at The Illustrious Winston Salem State University, majoring in Computer Science. I was born and raised in Raleigh, NC and I am 20 years old. 
 Fun fact about myself: I’m a twin. One of my favorite things to do is binge watch Marvel Movies! I also enjoy spending time with family and friends, reading (specifically self-help and mystery),playing video games, and doing yoga. One of my guilty pleasures is shopping for clothes and new perfume. 
+ 
+</p>
 
-</h5>
-
-      <p class="w3-text-grey"> Sub Bio</p>
+      
     </div>
   </div>
 </div>
