--- a/index.html
+++ b/index.html
@@ -51,14 +51,13 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif}
     </div>
 
     <div class="w3-twothird">
-      <h1 style= "text-align:center;">Get to Know Szaria</h1>
-      <img src="IMG_3510.png" alt="HEASHOT" class="center"
+      <h1 style="text-align:center">Get to Know Szaria</h1>
+      <p style="text-align:center;"><img src="IMG_3510.png" alt="Headshot"></p>
            width ="300"
-           height="400" >
-      <p style="textalign:center;">Hi! My name is Szaria Thompson. I’m a Junior at The Illustrious Winston Salem State University, majoring in Computer Science. I was born and raised in Raleigh, NC and I am 20 years old. 
-Fun fact about myself: I’m a twin. One of my favorite things to do is binge watch Marvel Movies! I also enjoy spending time with family and friends, reading (specifically self-help and mystery),playing video games, and doing yoga. One of my guilty pleasures is shopping for clothes and new perfume. 
- 
-</p>
+           height="400"
+      
+      <p style="text-align:center;">Hi! My name is Szaria Thompson. I’m a Junior at The Illustrious Winston Salem State University, majoring in Computer Science. I was born and raised in Raleigh, NC and I am 20 years old. 
+Fun fact about myself: I’m a twin. One of my favorite things to do is binge watch Marvel Movies! I also enjoy spending time with family and friends, reading (specifically self-help and mystery),playing video games, and doing yoga. One of my guilty pleasures is shopping for clothes and new perfume.</p>
 
       
     </div>
