--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif}
 
     <div class="w3-twothird">
       <h1 style="text-align:center">Get to Know Szaria</h1>
-      <p style="text-align:center;"><img src="IMG_3510.png" alt="Headshot"></p>
+      <p style="text-align:center;"><img src="IMG_3510.png" width = "400" height="300" alt="Headshot"></p>
          
       
       <p style="text-align:center;">Hi! My name is Szaria Thompson. I’m a Junior at The Illustrious Winston Salem State University, majoring in Computer Science. I was born and raised in Raleigh, NC and I am 20 years old. 
